Fix navbar visual bugs on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,14 +8,6 @@
     url("../assets/fonts/Satoshi-Variable.woff") format("woff");
 }
 
-/* @font-face {
-  font-family: "Syne";
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: swap;
-  src: url("../assets/fonts/Syne-VariableFont_wght.ttf") format("truetype");
-} */
-
 @font-face {
   font-family: "Roboto Mono";
   font-style: normal;
@@ -172,6 +164,8 @@
 
 html {
   scroll-behavior: smooth;
+  /* overflow-x: hidden; */
+  /* overflow-x: clip; */
 }
 
 /* accessibility focus */
@@ -294,52 +288,4 @@ hr {
 .simple-wave-end {
   background-image: url("../assets/dividers/simple-wave-end.svg");
   margin-top: -2px;
-}
-
-/* || RESPONSIVE */
-
-@media (max-width: 1040px) {
-  .portrait-container {
-    /* margin-top: var(--space-md); */
-    /* position: relative; */
-    bottom: -4.5rem;
-  }
-}
-
-@media (max-width: 768px) {
-  .menu-button,
-  .close-menu-button {
-    display: block;
-  }
-
-  #nav-links {
-    padding: var(--space-md);
-    position: fixed;
-    top: 0;
-    right: -100%;
-    height: 100vh; /* fallback */
-    height: 100dvh; /* full height on ios */
-    width: 100%;
-    z-index: 10;
-    background-color: var(--color-bg);
-    transition: 0.3s ease-in-out;
-  }
-  #nav-links ul {
-    flex-direction: column;
-    align-items: end;
-  }
-  #nav-links.open {
-    right: 0;
-  }
-
-  .sliding-navbar-links a {
-    font-size: var(--font-size-caption);
-  }
-
-  .footerContent {
-    flex-direction: column;
-  }
-  .footerContent li {
-    max-width: unset;
-  }
 }
